# where_is_the_logic

./: CMakeLists.txt
app/: CMakeLists.txt
app/collections/: CMakeLists.txt  user_collection.cpp  user_collection.h
app/handlers/: CMakeLists.txt  common.h  user_handler.cpp  user_handler.h
app/records/: CMakeLists.txt  user_record.cpp  user_record.h
app/validators/: CMakeLists.txt  validator_signup.cpp  validator_signup.h
sources/application/: CMakeLists.txt  application.cpp  application.h
sources/data_source/: CMakeLists.txt  data_source.cpp  data_source.h
sources/handlers/: hi.h
